# MaixPy-v1

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Kconfig  LICENSE.md  README.md  README_CN.md  README_ZH.md  build.md
.github/: issue_template.md
.github/issue_template/: bug_report.md
.github/workflows/: compile.yml  publish.yml
components/boards/: CMakeLists.txt  Kconfig
components/boards/config/: airv3_big.json  airv3_small.json  amigo.config.json  config.json  cube.config.json  readme.md
components/boards/include/: boards.h
components/boards/src/: boards.c
components/drivers/: CMakeLists.txt  Kconfig
components/kendryte_sdk/: .gitignore  CMakeLists.txt  Kconfig
components/kendryte_sdk/include/: FreeRTOSConfig.h  nncase.h  portmacro.h  sipeed_conf.h  sipeed_conv.h  sipeed_i2c.h  sipeed_kpu.h  sipeed_kpu_classifier.h  sipeed_mem.h  sipeed_sk9822.h  sipeed_spi.h  sipeed_type.h  sipeed_uid.h  sipeed_yolo2.h
components/kendryte_sdk/kendryte-standalone-sdk/: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  kendryte-package.json
components/kendryte_sdk/kendryte-standalone-sdk/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
components/kendryte_sdk/kendryte-standalone-sdk/cmake/: CMakeLists.txt  README.md  common.cmake  compile-flags.cmake  dump-config.cmake  executable.cmake  fix-9985.cmake  macros.cmake  macros.internal.cmake  toolchain.cmake
components/kendryte_sdk/kendryte-standalone-sdk/lib/: CMakeLists.txt
components/kendryte_sdk/kendryte-standalone-sdk/lib/bsp/: crt.S  entry.c  entry_user.c  interrupt.c  printf.c  sleep.c  syscalls.c
components/kendryte_sdk/kendryte-standalone-sdk/lib/bsp/include/: atomic.h  bsp.h  dump.h  encoding.h  entry.h  interrupt.h  platform.h  printf.h  sleep.h  syscalls.h  util.h
components/kendryte_sdk/kendryte-standalone-sdk/lib/drivers/: aes.c  apu.c  clint.c  dmac.c  dvp.c  fft.c  fpioa.c  gpio.c  gpiohs.c  i2c.c  i2s.c  plic.c  pwm.c  rtc.c  sha256.c  spi.c  sysclock.c  sysctl.c  timer.c  uart.c  uarths.c  utils.c  wdt.c
components/kendryte_sdk/kendryte-standalone-sdk/lib/drivers/include/: aes.h  apu.h  clint.h  dmac.h  dvp.h  fft.h  fpioa.h  gpio.h  gpio_common.h  gpiohs.h  i2c.h  i2s.h  io.h  kpu.h  plic.h  pwm.h  rtc.h  sha256.h  spi.h  sysctl.h  timer.h  uart.h  uarths.h  utils.h  wdt.h
components/kendryte_sdk/kendryte-standalone-sdk/lib/freertos/: core_sync.c  croutine.c  event_groups.c  list.c  locks.c  os_entry.c  pthread.c  queue.c  stream_buffer.c  tasks.c  timers.c
components/kendryte_sdk/kendryte-standalone-sdk/lib/freertos/conf/: FreeRTOSConfig.h
components/kendryte_sdk/kendryte-standalone-sdk/lib/freertos/include/: FreeRTOS.h  StackMacros.h  core_sync.h  croutine.h  event_groups.h  list.h  message_buffer.h  mpu_prototypes.h  mpu_wrappers.h  portable.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stream_buffer.h  task.h  timers.h
components/kendryte_sdk/kendryte-standalone-sdk/lib/freertos/portable/: heap_4.c  port.c  portasm.S  portmacro.h
components/kendryte_sdk/kendryte-standalone-sdk/lib/utils/include/: syslog.h
components/kendryte_sdk/src/: lib2.c  sipeed_i2c.c  sipeed_math.c  sipeed_mem.c  sipeed_sk9822.c  sipeed_spi.c  sipeed_yolo2.c
components/kendryte_sdk/src2/: bsp2.c  crt.S  heap_4.c  locks.c
components/micropython/: CMakeLists.txt  Kconfig
components/spiffs/: CMakeLists.txt  Kconfig
components/spiffs/tools/: .gitignore  README.md  gen_spiffs_image.py
components/utils/: CMakeLists.txt  Kconfig
components/utils/include/: buffer.h
extmod/: modurandom.c
maixpy/k210/: config_defaults.mk
maixpy/k210/main/: CMakeLists.txt
mpy-cross/: mpconfigport.h
ports/k210-freertos/: .gitignore  1.txt  LICENSE  Makefile  Makefile0  NOTICE  README.md  build.sh  clean_inc.sh  common.mk  common_c.mk  config.sh  demo.kfpkg  flash.sh  include.mk  k210.mk  k210_env  main.c  main.c1  modules_conf_default.mk  symtab.txt
ports/k210-freertos/docs/: MaiPy For Freertos.xmind  MaiPy_For_Freertos.png~  MaiPy_For_Freertos.xmind  README.d  demo.md  k210-freertos.xmind
ports/k210-freertos/inc/: drivers.mk  maixpy.mk  mpy_support.mk  sdk.mk
ports/k210-freertos/mpy_support/: 1.txt  Makefile  Makefile.bak  fatfs_port.c  gccollect.c  gccollect.h  help.c  include.mk  k210.mk  moduhashlib_maixpy.c  mpconfigboard.h  mpconfigport.h  mphalport.c  mphalport.h  (+3 more)
ports/k210-standalone/: Makefile  file_io.c  help.c  isp_auto_Sipeed.py  main.c  modutime.c  mpconfigport.h  mphalport.c  mphalport.h  py.patch  sdk.patch  sipeedm1.kfpkg  todo.md
projects/hello_world/: CMakeLists.txt  config_defaults.mk  project.py
projects/maixpy_amigo/: config_defaults.mk  config_minimum.mk
projects/maixpy_amigo_ips/: config_defaults.mk  config_minimum.mk
projects/maixpy_amigo_tft/: config_defaults.mk
projects/maixpy_bit/: config_defaults.mk
projects/maixpy_cube_minimum/: README.md  config_defaults.mk  config_with_ide_support.mk
projects/maixpy_dock/: config_defaults.mk
projects/maixpy_k210/: .config.mk  .gitigore  CMakeLists.txt  config_defaults.mk  config_with_lvgl.mk  project.py
projects/maixpy_k210_minimum/: config_defaults.mk  config_defaults_kmodel_v4_support.mk  config_defaults_openmv_kmodel_v4_with_ide_support.mk  config_defaults_speech_with_ide_support.mk  config_with_ide_support.mk
projects/maixpy_m5stick/: config_defaults.mk
projects/maixpy_m5stickv/: config_defaults.mk
projects/maixpy_twatch/: .gitignore  CMakeLists.txt  config_defaults.mk
projects/maixpy_yahboom/: config_defaults.mk
projects/mmu_code/: CMakeLists.txt  Kconfig  config_defaults.mk  project.py
projects/mpy_minimum/: config_defaults.mk
py/: gc.c  mkrules.mk  modthread.c  persistentcode.c  py.mk
tools/cmake/: compile.cmake  compile_flags.cmake  gen_binary.cmake  project.py  sort_components.py  tools.cmake
tools/docker/: Dockerfile  README.md
tools/flash/: .gitignore  flash.py  kfpkg.py
tools/kconfig/: genconfig.py  update_build_info.py
tools/release/: files_readme.txt  more_firmware.txt  readme.txt  release.sh
tools/spiffs/: README.md  gen_spiffs_image.py
(+854 files in other folders)
